--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 
-  <title>smoothie-tier-list</title>
+  <title>Smoothie Magic</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but smoothie-tier-list doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but Smoothie Magic doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
